--- a/keynotes.html
+++ b/keynotes.html
@@ -122,13 +122,43 @@ Computing</h2>
 	However, despite their gap from the true phenomena, these modes, however lacking in fidelity, still give us insight.  
         <br>
 	I’m sure this will be familiar to those working in other areas where theoretical models are applied to practical problems. 
-	There is a quantum-like tension between the complexity of the world and our ability to represent it, between accuracy and precision, between fidelity and formality.  Yet, we do learn about real phenomena from these simplified models, and in many contexts, from primary school estimation to scientific research we use these forms of thinking – I call this qualitative–quantitative reasoning.
-
-This has become particularly important during Covid, when both simple formulae and massive supercomputing models offer precise predictions of the impact of specific interventions. However, even the most complex model embodies simplifications and it is when the different models lead to qualitatively similar behaviours that they are most trusted.  Similar issues arise for climate change, international economics and supermarket shopping. 
-
-Qualitative–quantitative reasoning is ubiquitous, but not often discussed – almost a dirty secret for the formalist and yet what makes theory practical.  There are lessons for science and for schools, challenges for visualisation and argumentation.  I don’t know all of the answers, but by bringing this to the surface I know there are exciting questions.</p>
+	There is a quantum-like tension between the complexity of the world and our ability to represent it, between accuracy and precision,
+	between fidelity and formality. 
+	Yet, we do learn about real phenomena from these simplified models, and in many contexts, from primary school estimation to scientific research
+	we use these forms of thinking – I call this qualitative–quantitative reasoning.
+        <br>
+	This has become particularly important during Covid, when both simple formulae and massive supercomputing models offer precise predictions of the
+	impact of specific interventions.
+	However, even the most complex model embodies simplifications and it is when the different models lead to qualitatively similar behaviours
+	that they are most trusted. 
+	Similar issues arise for climate change, international economics and supermarket shopping. 
+	<br>
+	Qualitative–quantitative reasoning is ubiquitous, but not often discussed – almost a dirty secret for the formalist and yet what makes theory practical. 
+	There are lessons for science and for schools, challenges for visualisation and argumentation. 
+	I don’t know all of the answers, but by bringing this to the surface I know there are exciting questions.</p>
 <h3 style="color:#B40431;">Bio</h3>
-<p></p>
+<p>Professor Alan Dix is Director of the Computational Foundry at Swansea University, a £31m investment by the University, Welsh Government and
+	European Union to create a place to nurture fundamental digital research that makes a difference to real lives. 
+	Previously he spent 10 years in a mix of academic and commercial roles.
+	<br>
+	Alan has worked in human–computer interaction research since the mid 1980s and is the author of one of the major international textbooks on HCI
+	as well as of over 500 research publications from formal methods to design creativity.
+	Last year his book “Statistics for HCI: Making Sense of Quantitative Data” has been published by Morgan & Claypool, and his new online course
+	“Creativity: Methods to Design Better Products and Services” was launched at interaction-design.org. 
+	His latest book, “TouchIT: Understanding Design in a Physical–Digital World” is in press with OUP and he also has a second edition of a
+	textbook “An Introduction to AI” and a shorter “AI for Social Justice” under preparation.
+	<br>
+	Although he is known best for his research in HCI, Alan’s early academic background was in pure mathematics, where he was a member of the British team
+	to the 1978 International Mathematical Olympiad in Bucharest, and also statistics completing a Diploma in Mathematical Statistics at DPMMS in Cambridge
+	after finishing his BA in Mathematics a year early. 
+	He has worked in mathematical modelling, and aspects of applied AI including using genetic algorithms in early submarine design and co-directing
+	a dot-com era start-up on intelligent internet interfaces. 
+	In 1992 he wrote possibly the first paper to highlight the potential for gender and ethnic bias in black-box machine learning algorithms and
+	is now leading the algorithmic social justice theme of the UK Not-Equal network for Digital Economy and Social Justice.
+	He is also a CoI on the Swansea Centre for Doctoral Training “Enhancing Human Interactions and Collaborations with Data and Intelligence Driven Systems”,
+	a major initiative taking a people-first approach to AI and big data and CoI on “InterMusE – The  Internet of Musical Events: Digital Scholarship,
+	Community and the Archiving of Performance” a trans-Atlantic collaboration to democratise digitisation.
+</p>
 <br>
 
 <hr size="1">
