--- a/keynotes.html
+++ b/keynotes.html
@@ -103,7 +103,7 @@ Computing</h2>
 <a name="ALAN"></a>
 <h2 id="news" style="color:#B40431;">Alan Dix</h2>
 <hr size="1">
-<h2><h2>
+<h2>Qualitative–Quantitative Reasoning: thinking informally about formal things<h2>
 <h3 style="color:#B40431;">Abstract</h3>
 <p>When I first read Hardy and Wright’s Number Theory I was captivated.  However, as much as the mathematics itself, one statement always stood out for me. 
 	In the very first chapter they list a number of “questions concerning primes”, the first of which is whether there is a formula for the nth prime. 
