--- a/keynotes.html
+++ b/keynotes.html
@@ -49,7 +49,7 @@ Computing</h2>
 		Computational Foundry, Swansea University
 		<br>
 		<strong>Qualitative–Quantitative Reasoning: thinking informally about formal things</strong>
-	        [<a "href="#ALAN">Abstract and Bio</a>]</li>
+	        [<a href="#ALAN">Abstract and Bio</a>]</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
 	<li><a href="https://fsl.cs.illinois.edu/people/grigore-rosu/">Grigore Rosu</a>, University of Illinois at Urbana-Champaign, USA</li>
 	</ul>
