--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
 	    style="color:#CCAAAA;">Registration</a> | <a
             style="color:#CCAAAA;">Programme</a> | <a
-            style="color:#B40431;" href="#KEYNOTES">Keynote Speakers</a> | <a
+            style="color:#B40431;" href="keynotes.html">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
 	    style="color:#CCAAAA;">ICTAC School 2021</a>
      <hr>
