--- a/index.html
+++ b/index.html
@@ -172,8 +172,10 @@ submit extended versions of their papers to a special issue of the
 	      <hr size="1" />
 
 <ul>
-	<li><a href="http://www.padsweb.rwth-aachen.de/wvdaalst/">Wil van der Aalst</a>, RWTH Aachen University, Germany</li>
-	<li><a href="https://alandix.com">Alan Dix</a>, Swansea University, UK</li>
+	<li><a href="http://www.padsweb.rwth-aachen.de/wvdaalst/">Wil van der Aalst</a>, RWTH Aachen University, Germany
+	    [<a href="keynotes.html#WIL">Abstract and Bio</a>]</li>
+	<li><a href="https://alandix.com">Alan Dix</a>, Swansea University, UK
+	    [<a href="keynotes.html#ALAN">Abstract and Bio</a>]</li>
 	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
 	<li><a href="https://fsl.cs.illinois.edu/people/grigore-rosu/">Grigore Rosu</a>, University of Illinois at Urbana-Champaign, USA</li>
 		</ul>
