--- a/keynotes.html
+++ b/keynotes.html
@@ -43,7 +43,7 @@ Computing</h2>
 		Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT)
 		<br>
 		<strong>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes</strong>
-	        [<a href="#WIS">Abstract and Bio</a>]
+	        [<a href="#WIL">Abstract and Bio</a>]
 	        <br></li>
 	<li><a href="https://alandix.com">Alan Dix</a>,
 		Computational Foundry, Swansea University
@@ -56,7 +56,7 @@ Computing</h2>
 <br>
 
 <hr size="1">
-<a name="Wil"></a>
+<a name="WIL"></a>
 <h2 style="color:#B40431;">Wil van der Aalst</h2>
 <hr size="1">
 <h2>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<h2>
