--- a/keynotes.html
+++ b/keynotes.html
@@ -56,7 +56,7 @@ Computing</h2>
 <br>
 
 <hr size="1">
-<a name="WilvanderAalst"></a>
+<a name="WIL"></a>
 <img src="Images/WilvanderAalst.png" title="Wil van der Aalst" alt="Wil van der Aalst" width="10" height="15">
 <h2 style="color:#B40431;">Wil van der Aalst</h2>
 <hr size="1">
