--- a/keynotes.html
+++ b/keynotes.html
@@ -57,8 +57,9 @@ Computing</h2>
 
 <hr size="1">
 <a name="WIL"></a>
-<img src="Images/WilvanderAalst.png" title="Wil van der Aalst" alt="Wil van der Aalst" width="80" height="80">
 <h2 style="color:#B40431;">Wil van der Aalst</h2>
+<img src="Images/WilvanderAalst.png" title="Wil van der Aalst" alt="Wil van der Aalst" width="80" height="80">
+Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT)
 <hr size="1">
 <h2>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<h2>
 <h3 style="color:#B40431;">Abstract</h3>
