--- a/keynotes.html
+++ b/keynotes.html
@@ -40,17 +40,20 @@ Computing</h2>
 </center>
 <ul>
 	<li><a href="http://www.padsweb.rwth-aachen.de/wvdaalst/">Wil van der Aalst</a>,
-		Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT)
+		Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT),
+		Aachen, Germany
 		<br>
 		<strong>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes</strong>
 	        [<a href="#WIL">Abstract and Bio</a>]
 	        <br></li>
 	<li><a href="https://alandix.com">Alan Dix</a>,
-		Computational Foundry, Swansea University
+		Computational Foundry, Swansea University,
+		Swansea, UK
 		<br>
 		<strong>Qualitative–Quantitative Reasoning: thinking informally about formal things</strong>
 	        [<a href="#ALAN">Abstract and Bio</a>]</li>
-	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, Denmark</li>
+	<li><a href="http://people.cs.aau.dk/~kgl/">Kim Larsen</a>, Aalborg University, 
+		Aalborg, Denmark</li>
 	<li><a href="https://fsl.cs.illinois.edu/people/grigore-rosu/">Grigore Rosu</a>, University of Illinois at Urbana-Champaign, USA</li>
 	</ul>
 <br>
@@ -58,8 +61,9 @@ Computing</h2>
 <hr size="1">
 <a name="WIL"></a>
 <h2 style="color:#B40431;">Wil van der Aalst</h2>
+Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT),
+Aachen, Germany
 <img src="Images/WilvanderAalst.png" title="Wil van der Aalst" alt="Wil van der Aalst" width="80" height="80">
-Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT)
 <hr size="1">
 <h2>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<h2>
 <h3 style="color:#B40431;">Abstract</h3>
