--- a/keynotes.html
+++ b/keynotes.html
@@ -63,6 +63,7 @@ Computing</h2>
 <h2 style="color:#B40431;">Wil van der Aalst</h2>
 Process and Data Science (PADS)  at RWTH Aachen University & Fraunhofer-Institut für Angewandte Informationstechnik (FIT),
 Aachen, Germany
+<br>
 <img src="Images/WilvanderAalst.png" title="Wil van der Aalst" alt="Wil van der Aalst" width="80" height="80">
 <hr size="1">
 <h2>Concurrency and Objects Matter: Disentangling the Fabric of Real Operational Processes<h2>
@@ -108,6 +109,8 @@ Aachen, Germany
 <hr size="1">
 <a name="ALAN"></a>
 <h2 id="news" style="color:#B40431;">Alan Dix</h2>
+Computational Foundry, Swansea University,
+Swansea, UK
 <hr size="1">
 <h2>Qualitative–Quantitative Reasoning: thinking informally about formal things<h2>
 <h3 style="color:#B40431;">Abstract</h3>
@@ -170,6 +173,8 @@ Aachen, Germany
 <hr size="1">
 <a name="KIM"></a>
 <h2 id="news" style="color:#B40431;">Kim Larsen</h2>
+Aalborg University, 
+Aalborg, Denmark
 <hr size="1">
 <h2>TBA<h2>
 <h3 style="color:#B40431;">Abstract</h3>
@@ -181,6 +186,7 @@ Aachen, Germany
 <hr size="1">
 <a name="GRIGORE"></a>
 <h2 id="news" style="color:#B40431;">Grigore Rosu</h2>
+University of Illinois at Urbana-Champaign, USA
 <hr size="1">
 <h2>TBA<h2>
 <h3 style="color:#B40431;">Abstract</h3>
