--- a/programme.html
+++ b/programme.html
@@ -36,9 +36,13 @@
 Computing</h2>
 <h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
 <h1 style="color:#B40431;">PROGRAMME</h1>
+<h3 style="color:#B40431;">GMT+6: Nur-Sultan, Almaty</h3>
 <hr>
 </center>
-
+<h3 style="color:#B40431;">Other Time Zone:
+ <a style="color:#B40431;" href="/.">GMT+1 (London)</a> |
+ <a style="color:#B40431;" href="/.">GMT+2 (CEST)</a>
+</h3>
 <hr size="1">
 <a name="WED"></a>
 <h2 style="color:#B40431;">Wednesday, 8 September 2021</h2>
