--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -126,7 +126,47 @@ Computing</h2>
                   </tr>
                   <tr>
                     <td>
-                       <p class="text"><strong>11:15-11:30 - BREAK</strong></p>
+                       <p class="text"><strong>17:00-18:00 - LONG BREAK</strong></p>
+                    </td>
+                  </tr>
+                 <tr>
+                    <td>
+                      <p class="text"><strong>18:00-19:30 - SESSION 2</strong> (Chair: TBA)</p>
+                      <ul class="text">
+                        <li><strong>18:00-18:30 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>18:30-19:00 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>19:00-19:30 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                    </ul>
                     </td>
                   </tr>
 <br>
