--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -39,7 +39,7 @@ Computing</h2>
 <h3 style="color:#B40431;">GMT+6: Nur-Sultan, Almaty</h3>
 <hr>
 </center>
-<h3 style="color:#B40431;">Other Time Zone:
+<h3 style="color:#000000;">Schedule for Other Time Zone:
  <a style="color:#B40431;" href="/.">GMT+1 (London)</a> |
  <a style="color:#B40431;" href="/.">GMT+2 (CEST)</a>
 </h3>
