--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -53,7 +53,7 @@ Computing</h2>
                   </tr>
                    <tr>
                     <td>
-                       <p class="text"><strong>13:30-14:30 - KEYNOTE SPEAKER: TBA</strong> (Chair: TBA)
+                       <p class="text"><strong>13:30-14:30 - KEYNOTE SPEAKER 1: TBA</strong> (Chair: TBA)
                          <br>
                          <strong>TBA</strong>
                          <br>
@@ -174,11 +174,264 @@ Computing</h2>
 <hr size="1">
 <a name="WED"></a>
 <h2 style="color:#B40431;">Thursday, 9 September 2021</h2>
+	          <tr>
+                    <td>
+                       <p class="text"><strong>13:30-14:30 - KEYNOTE SPEAKER 2: TBA</strong> (Chair: TBA)
+                         <br>
+                         <strong>TBA</strong>
+                         <br>
+                         <a class="link"
+                            href="keynote.html">Abstract and Speaker's Biography</a> |
+                         <a class="link"
+                            target="_tabs"
+                            href="slides.pdf">Slides (PDF)</a> |
+                         <a class="link"
+                            target="_tabs"
+                            href="video.mp4">Video</a>
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                       <p class="text"><strong>14:30-15:00 - SHORT BREAK</strong></p>
+                    </td>
+                  </tr>               
+                 <tr>
+                    <td>
+                      <p class="text"><strong>15:00-17:00 - SESSION 3</strong> (Chair: TBA)</p>
+                      <ul class="text">
+                        <li><strong>15:00-15:30 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>15:30-16:00 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>16:00-16:30 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>16:30-17:00 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                    </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                       <p class="text"><strong>17:00-18:00 - LONG BREAK</strong></p>
+                    </td>
+                  </tr>
+                 <tr>
+                    <td>
+                      <p class="text"><strong>18:00-19:00 - SESSION 4</strong> (Chair: TBA)</p>
+                      <ul class="text">
+                        <li><strong>18:00-18:30 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>18:30-19:00 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+	             </td>
+	           <tr>
+                    <td>
+                       <p class="text"><strong>19:00-20:00 - KEYNOTE SPEAKER 3: TBA</strong> (Chair: TBA)
+                         <br>
+                         <strong>TBA</strong>
+                         <br>
+                         <a class="link"
+                            href="keynote.html">Abstract and Speaker's Biography</a> |
+                         <a class="link"
+                            target="_tabs"
+                            href="slides.pdf">Slides (PDF)</a> |
+                         <a class="link"
+                            target="_tabs"
+                            href="video.mp4">Video</a>
+                      </p>
+                    </td>
+                   </tr>
+                    </ul>
+                    </td>
+                  </tr>
 <br>
 <br>
 <hr size="1">
 <a name="WED"></a>
 <h2 style="color:#B40431;">Friday, 10 September 2021</h2>
+                    <td>
+                       <p class="text"><strong>13:30-14:30 - KEYNOTE SPEAKER 4: TBA</strong> (Chair: TBA)
+                         <br>
+                         <strong>TBA</strong>
+                         <br>
+                         <a class="link"
+                            href="keynote.html">Abstract and Speaker's Biography</a> |
+                         <a class="link"
+                            target="_tabs"
+                            href="slides.pdf">Slides (PDF)</a> |
+                         <a class="link"
+                            target="_tabs"
+                            href="video.mp4">Video</a>
+                      </p>
+                    </td>
+                   </tr>
+                   <tr>
+                    <td>
+                       <p class="text"><strong>14:30-15:00 - SHORT BREAK</strong></p>
+                    </td>
+                  </tr>               
+                 <tr>
+                    <td>
+                      <p class="text"><strong>15:00-17:00 - SESSION 5</strong> (Chair: TBA)</p>
+                      <ul class="text">
+                        <li><strong>15:00-15:30 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>15:30-16:00 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>16:00-16:30 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>16:30-17:00 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                    </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                       <p class="text"><strong>17:00-18:00 - LONG BREAK</strong></p>
+                    </td>
+                  </tr>
+                 <tr>
+                    <td>
+                      <p class="text"><strong>18:00-20:00 - SESSION 6</strong> (Chair: TBA)</p>
+                      <ul class="text">
+                        <li><strong>18:00-18:30 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>18:30-19:00 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>19:00-19:30 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                        <li><strong>19:30-20:00 - TBA</strong><br>
+                          TBA<br>
+                           <a class="link"
+                             target="_tabs"
+                             href="paper.pdf">Paper (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="slides.pdf">Slides (PDF)</a> |
+                           <a class="link"
+                             target="_tabs"
+                             href="video.mp4">Video</a></li>
+                    </ul>
+                    </td>
+                  </tr>
 <br>
 <br>
 
