--- a/programme-GMT+6.html
+++ b/programme-GMT+6.html
@@ -278,7 +278,8 @@ Computing</h2>
                            <a class="link"
                              target="_tabs"
                              href="video.mp4">Video</a></li>
-	             </td>
+	             </td>	    
+	           </tr>
 	           <tr>
                     <td>
                        <p class="text"><strong>19:00-20:00 - KEYNOTE SPEAKER 3: TBA</strong> (Chair: TBA)
@@ -383,7 +384,7 @@ Computing</h2>
                   </tr>
                  <tr>
                     <td>
-                      <p class="text"><strong>18:00-20:00 - SESSION 6</strong> (Chair: TBA)</p>
+                      <p class="text"><strong>18:00-19:30 - SESSION 6</strong> (Chair: TBA)</p>
                       <ul class="text">
                         <li><strong>18:00-18:30 - TBA</strong><br>
                           TBA<br>
@@ -418,18 +419,12 @@ Computing</h2>
                            <a class="link"
                              target="_tabs"
                              href="video.mp4">Video</a></li>
-                        <li><strong>19:30-20:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
                     </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                       <p class="text"><strong>19:30-19:45 - CLOSING</strong></p>
                     </td>
                   </tr>
 <br>
