--- a/school.html
+++ b/school.html
@@ -21,20 +21,64 @@
             style="color:#B40431;" href="#DATES">Important Dates</a> | <a
             style="color:#B40431;" href="#OVERVIEW">Overview and Scope</a> | <a
             style="color:#B40431;" href="#CFP">Call for Papers</a> | <a
-	          style="color:#B40431;" href="REGISTRATION">Registration</a> | <a
+	    style="color:#B40431;" href="REGISTRATION">Registration</a> | <a
             style="color:#B40431;" href="programme-GMT+6.html">Programme</a> | <a
             style="color:#B40431;" href="keynotes.html">Keynote Speakers</a> | <a
             style="color:#B40431;" href="#COMMITTEES">Committees</a> | <a
-	          style="color:#CCAAAA;">ICTAC School 2021</a>
+	    style="color:#CCAAAA;">ICTAC School 2021</a>
      <hr>
    </td>
 </tr>
 <img src="../yurt.jpg" title="Alexandr frolov, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons" alt="Kazakh Yurt" width="700" height="453">
 
-<h1>ICTAC 2021</h1>
-<h2>18th International Colloquium on Theoretical Aspects of
+<h1>ICTAC SCHOOL 2021</h1>
+<h2>Summer School of the 18th International Colloquium on Theoretical Aspects of
 Computing</h2>
-<h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 6-10,  2021</strong></h2>
+<h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 1-7,  2021</strong></h2>
+<hr>
+<tr height="10pt">
+  <td align="center">
+    <hr> <a style="color:#B40431; href="#COURSES"">List of Courses</a> | <a
+            style="color:#B40431;" href="#SCHEDULE">Schedule</a> | <a
+            style="color:#B40431;" href="#ABSTRACTS">Important Dates</a>
+     <hr>
+   </td>
+</tr>
+<
+<hr>
+<a name="COURSES"></a>
+<ol>
+	<li><strong>Software Engineering for Robotics: RoboStar technology</strong>
+		<ul>
+			<li><strong>Ana Cavalcanti</strong></li>
+		</ul></li>
+	<li><strong>Modelling interactions: digital and physical</strong>
+		<ul>
+			<li><strong>Alan Dix</strong></li>
+		</ul></li>
+	<li><strong>Applying Formal Methods in Healthcare</strong>
+		<ul>
+			<li><strong>Juliana Küster Filipe Bowles,</strong></li>
+		</ul></li>
+	<li><strong>Process Mining</strong><br>
+		<ul>
+			<li><strong>Wil van der Aalst</strong></li>
+		</ul></li>
+	<li><strong>A Tutorial to Maude</strong>
+		<ul>
+			<li><strong>Peter Csaba Olvesky</strong></li>
+		</ul></li>
+	<li><strong>Research and Industry</strong>
+		<ul>
+			<li><strong>Paddy Krishnan</strong></li>
+			<li><strong>Ben Tyler</strong></li>
+		</ul></li>
+	<li><strong>HCI</strong>
+		<ul>
+			<li><strong>Antonio Cerone</strong></li>
+		</ul></li>
+</ol>
+<a name="SCHEDULE"></a>
 <h1 style="color:#B40431;">SCHEDULE</h1>
 <h3 style="color:#B40431;">GMT+6: Nur-Sultan, Almaty</h3>
 <hr>
