--- a/school.html
+++ b/school.html
@@ -38,14 +38,14 @@ Computing</h2>
 <hr>
 <tr height="10pt">
   <td align="center">
-    <hr> <a style="color:#B40431; href="#COURSES"">List of Courses</a> | <a
+    <hr> <a style="color:#B40431;" href="#COURSES"">List of Courses</a> | <a
             style="color:#B40431;" href="#SCHEDULE">Schedule</a> | <a
             style="color:#B40431;" href="#ABSTRACTS">Important Dates</a>
      <hr>
    </td>
 </tr>
-<
 <hr>
+</center>	
 <a name="COURSES"></a>
 <ol>
 	<li><strong>Software Engineering for Robotics: RoboStar technology</strong>
@@ -79,6 +79,7 @@ Computing</h2>
 		</ul></li>
 </ol>
 <a name="SCHEDULE"></a>
+<center>
 <h1 style="color:#B40431;">SCHEDULE</h1>
 <h3 style="color:#B40431;">GMT+6: Nur-Sultan, Almaty</h3>
 <hr>
