--- a/school.html
+++ b/school.html
@@ -48,9 +48,9 @@ Computing</h2>
 </center>	
 <a name="COURSES"></a>
 <ol>
-	<li><strong>Software Engineering for Robotics: RoboStar technology</strong>
+	<li><h3>Software Engineering for Robotics: RoboStar technology</h3>
 		<ul>
-			<li><strong>Ana Cavalcanti</strong></li>
+			<li><h3>Ana Cavalcanti</h3></li>
 		</ul></li>
 	<li><strong>Modelling interactions: digital and physical</strong>
 		<ul>
