--- a/school.html
+++ b/school.html
@@ -35,47 +35,49 @@
 <h2>Summer School of the 18th International Colloquium on Theoretical Aspects of
 Computing</h2>
 <h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 1-7,  2021</strong></h2>
-<hr>
 <tr height="10pt">
   <td align="center">
-    <hr> <a style="color:#B40431;" href="#COURSES"">List of Courses</a> | <a
+    <hr> <a style="color:#B40431;" href="#COURSES">List of Courses</a> | <a
             style="color:#B40431;" href="#SCHEDULE">Schedule</a> | <a
             style="color:#B40431;" href="#ABSTRACTS">Important Dates</a>
      <hr>
    </td>
 </tr>
-<hr>
 </center>	
 <a name="COURSES"></a>
+<center>
+<h1 style="color:#B40431;">LIST OF COURSES</h1>
+<hr>
+</center>
 <ol>
 	<li><h3>Software Engineering for Robotics: RoboStar technology</h3>
 		<ul>
 			<li><h3>Ana Cavalcanti</h3></li>
 		</ul></li>
-	<li><strong>Modelling interactions: digital and physical</strong>
+	<li><h3>Modelling interactions: digital and physical</h3>
 		<ul>
-			<li><strong>Alan Dix</strong></li>
+			<li><h3>Alan Dix</h3></li>
 		</ul></li>
-	<li><strong>Applying Formal Methods in Healthcare</strong>
+	<li><h3>Applying Formal Methods in Healthcare</h3>
 		<ul>
-			<li><strong>Juliana Küster Filipe Bowles,</strong></li>
+			<li><h3>Juliana Küster Filipe Bowles,</h3></li>
 		</ul></li>
-	<li><strong>Process Mining</strong><br>
+	<li><h3>Process Mining</h3><br>
 		<ul>
-			<li><strong>Wil van der Aalst</strong></li>
+			<li><h3>Wil van der Aalst</h3></li>
 		</ul></li>
-	<li><strong>A Tutorial to Maude</strong>
+	<li><h3>A Tutorial to Maude</h3>
 		<ul>
-			<li><strong>Peter Csaba Olvesky</strong></li>
+			<li><h3>Peter Csaba Olvesky</h3></li>
 		</ul></li>
-	<li><strong>Research and Industry</strong>
+	<li><h3>Research and Industry</h3>
 		<ul>
-			<li><strong>Paddy Krishnan</strong></li>
-			<li><strong>Ben Tyler</strong></li>
+			<li><h3>Paddy Krishnan</h3></li>
+			<li><h3>Ben Tyler</h3></li>
 		</ul></li>
-	<li><strong>HCI</strong>
+	<li><h3>HCI</h3>
 		<ul>
-			<li><strong>Antonio Cerone</strong></li>
+			<li><h3>Antonio Cerone</h3></li>
 		</ul></li>
 </ol>
 <a name="SCHEDULE"></a>
