--- a/school.html
+++ b/school.html
@@ -39,7 +39,7 @@ Computing</h2>
   <td align="center">
     <hr> <a style="color:#B40431;" href="#COURSES">List of Courses</a> | <a
             style="color:#B40431;" href="#SCHEDULE">Schedule</a> | <a
-            style="color:#B40431;" href="#ABSTRACTS">Important Dates</a>
+            style="color:#B40431;" href="#ABSTRACTS">Abstracts</a>
      <hr>
    </td>
 </tr>
@@ -59,31 +59,42 @@ Computing</h2>
 	<li><h3>Modelling interactions: digital and physical</h3>
 		<ul>
 			<li><h3>Alan Dix</h3></li>
-		</ul></li>
+		</ul>
+		<hr>
+	</li>
 	<li><h3>Applying Formal Methods in Healthcare</h3>
 		<ul>
 			<li><h3>Juliana Küster Filipe Bowles,</h3></li>
 		</ul>
 		<hr>
 	</li>
-	<li><h3>Process Mining</h3><br>
+	<li><h3>Process Mining</h3>
 		<ul>
 			<li><h3>Wil van der Aalst</h3></li>
-		</ul></li>
+		</ul>
+		<hr>
+	</li>
 	<li><h3>A Tutorial to Maude</h3>
 		<ul>
 			<li><h3>Peter Csaba Olvesky</h3></li>
-		</ul></li>
+		</ul>
+		<hr>
+	</li>
 	<li><h3>Research and Industry</h3>
 		<ul>
 			<li><h3>Paddy Krishnan</h3></li>
 			<li><h3>Ben Tyler</h3></li>
-		</ul></li>
+		</ul>
+		<hr>
+	</li>
 	<li><h3>HCI</h3>
 		<ul>
 			<li><h3>Antonio Cerone</h3></li>
-		</ul></li>
+		</ul>
+		<hr>
+	</li>
 </ol>
+<hr>
 <a name="SCHEDULE"></a>
 <center>
 <h1 style="color:#B40431;">SCHEDULE</h1>
