--- a/school.html
+++ b/school.html
@@ -50,8 +50,8 @@ Computing</h2>
 <hr>
 </center>
 <ol>
-	<li><h3>Software Engineering for Robotics: RoboStar technology</h3><br>
-		4 hours - <strong>Mon 1 Sep 13:00-17:00</strong>
+	<li><h3>Software Engineering for Robotics: RoboStar technology</h3>
+		<strong>(<i>4 hours</i> - Mon 1 Sep 13:00-17:00)</strong>
 		<ul>
 			<li><h3>Ana Cavalcanti</h3></li>
 		</ul>
