--- a/school.html
+++ b/school.html
@@ -57,7 +57,7 @@ Computing</h2>
 		</ul>
 		<hr>
 	</li>
-	<li><h3>Modelling interactions: digital and physical</h3>
+	<li><h3>Modelling interactions: digital and physical (<i>4 hours</i> - Mon 1 Sep 18:00-20:00)</h3>
 		<ul>
 			<li><h3>Alan Dix</h3></li>
 		</ul>
