--- a/school.html
+++ b/school.html
@@ -50,14 +50,14 @@ Computing</h2>
 <hr>
 </center>
 <ol>
-	<li><h3 style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</h3>
+	<li><h3><a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a></h3>
 		<strong>(<i>4 hours</i> - Mon 1 Sep 13:00-17:00)</strong>
 		<ul>
 			<li><h3>Ana Cavalcanti</h3></li>
 		</ul>
 		<hr>
 	</li>
-	<li><h3 style="color:#B40431;">Modelling interactions: digital and physical (<i>4 hours</i> - Mon 1 Sep 18:00-20:00)</h3>
+	<li><h3><a style="color:#B40431;">Modelling interactions: digital and physical</a> (<i>4 hours</i> - Mon 1 Sep 18:00-20:00)</h3>
 		<ul>
 			<li><h3>Alan Dix</h3></li>
 		</ul>
