--- a/school.html
+++ b/school.html
@@ -112,127 +112,20 @@ Computing</h2>
 <h2 style="color:#B40431;">Wednesday, 1 September 2021</h2>
                   <tr>
                     <td>
-                       <p class="text"><strong>13:15-13:30 - OPENING</strong></p>
+                       <p class="text"><strong>12:30-13:00 - OPENING</strong></p>
                     </td>
                   </tr>
                    <tr>
                     <td>
-                       <p class="text"><strong>13:30-14:30 - KEYNOTE SPEAKER 1: TBA</strong> (Chair: TBA)
-                         <br>
-                         <strong>TBA</strong>
-                         <br>
-                         <a class="link"
-                            href="keynote.html">Abstract and Speaker's Biography</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="slides.pdf">Slides (PDF)</a> |
-                         <a class="link"
-                            target="_tabs"
-                            href="video.mp4">Video</a>
+                       <p class="text"><strong>13:00-17:00 - Software Engineering for Robotics: RoboStar technology</strong>
                       </p>
                     </td>
                    </tr>
                    <tr>
                     <td>
-                       <p class="text"><strong>14:30-15:00 - SHORT BREAK</strong></p>
+                       <p class="text"><strong>17:00-18:00 - BREAK</strong></p>
                     </td>
                   </tr>               
-                 <tr>
-                    <td>
-                      <p class="text"><strong>15:00-17:00 - SESSION 1</strong> (Chair: TBA)</p>
-                      <ul class="text">
-                        <li><strong>15:00-15:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>15:30-16:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>16:00-16:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>16:30-17:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                    </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                       <p class="text"><strong>17:00-18:00 - LONG BREAK</strong></p>
-                    </td>
-                  </tr>
-                 <tr>
-                    <td>
-                      <p class="text"><strong>18:00-19:30 - SESSION 2</strong> (Chair: TBA)</p>
-                      <ul class="text">
-                        <li><strong>18:00-18:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>18:30-19:00 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                        <li><strong>19:00-19:30 - TBA</strong><br>
-                          TBA<br>
-                           <a class="link"
-                             target="_tabs"
-                             href="paper.pdf">Paper (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="slides.pdf">Slides (PDF)</a> |
-                           <a class="link"
-                             target="_tabs"
-                             href="video.mp4">Video</a></li>
-                    </ul>
-                    </td>
-                  </tr>
 <br>
 <br>
 <br>
