--- a/school.html
+++ b/school.html
@@ -35,6 +35,7 @@
 <h2>Summer School of the 18th International Colloquium on Theoretical Aspects of
 Computing</h2>
 <h2>VIRTUAL EVENT organied by Nazarbayev University, Nur-Sultan, Kazakhstan, <strong>September 1-7,  2021</strong></h2>
+<!--
 <tr height="10pt">
   <td align="center">
     <hr> <a style="color:#B40431;" href="#COURSES">List of Courses</a> | <a
@@ -43,6 +44,7 @@ Computing</h2>
      <hr>
    </td>
 </tr>
+-->
 </center>	
 <a name="COURSES"></a>
 <center>
@@ -51,50 +53,54 @@ Computing</h2>
 </center>
 <ol>
 	<li><h3><a style="color:#B40431;">Software Engineering for Robotics: RoboStar technology</a>
-		(<i>4 hours</i> - Mon 1 Sep 13:00-17:00 GMT+6)</h3>
+		(<i>4 hours</i> - Wed 1 Sep 13:00-17:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Ana Cavalcanti</h3></li>
 		</ul>
 		<hr>
 	</li>
 	<li><h3><a style="color:#B40431;">Modelling interactions: digital and physical</a>
-		(<i>4 hours</i> - Mon 1 Sep 18:00-20:00 GMT+6)</h3>
+		(<i>2 hours</i> - Wed 1 Sep 18:00-20:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Alan Dix</h3></li>
 		</ul>
 		<hr>
 	</li>
-	<li><h3>Applying Formal Methods in Healthcare</h3>
+	<li><h3><a style="color:#B40431;">Applying Formal Methods in Healthcare</a>
+		(<i>3 hours</i> - Thu 2, Fri 3, Mon 6 Sep 16:00-17:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Juliana Küster Filipe Bowles,</h3></li>
 		</ul>
 		<hr>
 	</li>
-	<li><h3>Process Mining</h3>
+	<li><h3><a style="color:#B40431;">Process Mining</a>
+		(<i>3 hours</i> - Thu 2 Sep 18:00-20:00, Fri 3Sep 19:00-20:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Wil van der Aalst</h3></li>
 		</ul>
 		<hr>
 	</li>
-	<li><h3>A Tutorial to Maude</h3>
-		<ul>
+	<li><h3><a style="color:#B40431;">A Tutorial to Maude</a>
+		(<i>5 hours</i> - Thu 2 Sep 15:00-16:00, Fri 3 Sep 14:00-16:00, Tue 7 Sep 15:00-17:00 GMT+6)</h3>
 			<li><h3>Peter Csaba Olvesky</h3></li>
 		</ul>
 		<hr>
 	</li>
-	<li><h3>HCI</h3>
-		<ul>
-			<li><h3>Antonio Cerone</h3></li>
-		</ul>
-		<hr>
 	</li>
-	<li><h3>Research and Industry</h3>
+	<li><h3><a style="color:#B40431;">Research and Industry</a>
+		(<i>2 hours</i> - Mon 6 Sep 14:00-16:00 GMT+6)</h3>
 		<ul>
 			<li><h3>Paddy Krishnan</h3></li>
 			<li><h3>Ben Tyler</h3></li>
 		</ul>
 		<hr>
 	</li>
+	<li><h3><a style="color:#B40431;">Analyzing interactions: informally and formally</a>
+		(<i>2 hours</i> - Tue 7 Sep 18:00-20:00 GMT+6)</h3>
+		<ul>
+			<li><h3>Antonio Cerone</h3></li>
+		</ul>
+		<hr>
 </ol>
 <hr>
 <a name="SCHEDULE"></a>
